Shop site finished

--- a/shop.html
+++ b/shop.html
@@ -2,14 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>О Продукции</title>
+    <!-- Meta Tags -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="./assets/images/GoldImages/new.png">
     <!-- Page Title -->
     <title> Gold Fitness </title>
     <!-- Icon fonts -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
@@ -34,7 +36,6 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
-
 </head>
 <header>
     <div class="header-top">
@@ -75,24 +76,26 @@
                     </div>
                 </div>
                 <div class="col-lg-8 d-none d-lg-block">
-                    <div class="main-menu1">
-                        <nav class="nav_mobile_menu">
-                            <ul>
+                    <span class="black_menu">
+                        <div class="main-menu">
+                            <nav class="nav_mobile_menu">
+                                <ul>
 
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="index.html#">Services</a>
+                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="index.html#">Services</a>
 
-                                </li>
-                                <li><a href="http://wpocean.com/tf/html/shipter/case.html">Pages</a>
+                                    </li>
+                                    <li><a href="http://wpocean.com/tf/html/shipter/case.html">Pages</a>
 
-                                </li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="index.html#">Blog</a>
+                                    </li>
+                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="index.html#">Blog</a>
 
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </span>
                 </div>
                 <div class="col-lg-1 col-md-3 col-sm-3 col-3 search">
                     <!-- Empty -->
@@ -196,6 +199,90 @@
         </div>
     </div>
 
+    </div>
+    <div class="footer ">
+        <div class="container">
+            <div class="row">
+                <div class=" col-md-6 map">
+                    <iframe class="container"
+                        src="https://www.google.com/maps/d/embed?mid=12tbguV5yB2x00ZCPdjXyxVJcQF3vubdY" width="500"
+                        height="360" style="border:none"></iframe>
+                    <!--  <iframe 
+                                class="container"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d731.0456491350257!2d74.63685482918828!3d42.86898998160811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDUyJzA4LjQiTiA3NMKwMzgnMTQuNyJF!5e0!3m2!1sru!2skg!4v1555480963741!5m2!1sru!2skg"
+                                width="500" height="360" frameborder="5px" style="border: none"
+                                allowfullscreen></iframe> -->
+                </div>
+                <div class="col-md-6">
+                    <div class="contact">
+                        Контакты
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 ">
+                            <div class="foot_text_blog">
+                                Телефон:
+                            </div>
+                            <div class="text_2">
+                                +996 (554) 88 19 62
+
+                            </div>
+                        </div>
+                        <div class="col-md-4 ">
+                            <div class="foot_text_blog foot_icon_2">
+                                Email:
+                            </div>
+                            <div class="text_2">
+
+                                Spider@mail.ru
+                            </div>
+                        </div>
+                        <div class="col-md-4 ">
+                            <div class="foot_text_blog foot_icon_3 ">
+                                Адресс:
+                            </div>
+                            <div class="text_2">
+                                ул.7 Апрель
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row foot_last">
+                        <div class="col-md-4">
+                            <div class="foot_text_blog foot_icon_4">
+                                Режим:
+                            </div>
+                            <div class="text_2">
+                                Пн - Суб 8:00 - 22:00
+
+                            </div>
+                        </div>
+                        <div class="col-md-4 ">
+                            <div class=" foot_text_blog">
+                                Социальные сети:
+                            </div>
+                            <div class="footer_icons">
+                                <a href="#"> <i class="fa fa-facebook text_2"></i></a>
+                                <a href="#"> <i class="fa fa-instagram text_2"></i></a>
+                                <a href="#"> <i class="fab fa-telegram text_2"></i></a>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 ">
+                            <div class="foot_text_blog foot_icon_2  ">
+                                Made by:
+                            </div>
+                            <div class="footer_iconsf">
+                                Contact us:<a href="https://t.me/NasipDev" target="_blank"> <i
+                                        class="fab fa-telegram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="foot_copy">
+        © Copyrights 2019. Nasip Juma.
+        <!-- All Rights Reserved. -->
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
