--- a/index.html
+++ b/index.html
@@ -304,10 +304,10 @@
         </div>
     </div>
 
-    <div class="counter-area">
+   <!--  <div class="counter-area">
         <div class="container">
 
-            <!--   <div class=" row">
+              <div class=" row">
                 <div class="col-md-4 enjoy">Получай результат </div>
                     <div class="col-md-4 enjoy">Получай результат </div>  
                 <div class="col-md-4 enjoy">Получай результат </div>
@@ -323,7 +323,7 @@
                 <div class="col-md-4 enjoy_2">Наслождайся позитивом</div>
                     <div class="col-md-4 enjoy_2">Наслождайся позитивом</div>        
                 <div class="col-md-4 enjoy_2">Наслождайся позитивом</div>
-            </div> -->
+            </div>
             <div class="row">
                 <div class="col-lg-7 col-md-6 col-sm-12">
                     <div class="counter-content">
@@ -368,7 +368,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- counter-area end -->
     <!-- pice-area start -->
     <div class="pricing-area">
