Submenu in shop

--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-9 col-sm-9 col-9">
                         <div class="logo">
-                            <p>
-                                GOLD FITNESS
-                            </p>
+                            <a href="#">
+                                <p>
+                                    GOLD FITNESS
+                                </p>
+                            </a>
                         </div>
                     </div>
                     <div class="col-lg-8 d-none d-lg-block">
@@ -304,7 +306,7 @@
         </div>
     </div>
 
-   <!--  <div class="counter-area">
+    <!--  <div class="counter-area">
         <div class="container">
 
               <div class=" row">
