--- a/shop.html
+++ b/shop.html
@@ -70,9 +70,11 @@
             <div class="row">
                 <div class="col-lg-3 col-md-9 col-sm-9 col-9">
                     <div class="logo_1">
+                        <a href="index.html">
                         <p>
                             GOLD FITNESS
                         </p>
+                    </a>
                     </div>
                 </div>
                 <div class="col-lg-8 d-none d-lg-block">
