Added links to Main menu

--- a/index.html
+++ b/index.html
@@ -97,16 +97,13 @@
                             <nav class="nav_mobile_menu">
                                 <ul>
 
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="index.html#">Services</a>
-
-                                    </li>
-                                    <li><a href="http://wpocean.com/tf/html/shipter/case.html">Pages</a>
-
-                                    </li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                    <li><a href="index.html#">Blog</a>
-
+                                   <!--  <li><a href="#about">О Нас</a></li> -->
+                                    <li><a href="#images">Галерея</a></li>
+                                    <li><a href="#shop">Товары</a></li>
+                                    <li><a href="#price">Расценки</a></li>
+                                    <li><a href="#team">Тренера</a>
+                                    <li><a href="#news">Новости</a></li>
+                                    <li><a href="#footer">Контакты</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -165,7 +162,7 @@
     <!-- end of hero slider -->
 
     <!-- .about-area start -->
-    <div class="about-area">
+    <div class="about-area" id="about">
         <div class="container">
             <div class="section-title1 text-center">
                 <span>Что Мы Можем Предложить</span>
@@ -263,7 +260,7 @@
         </div>
     </section>
     <!-- feature-area start -->
-    <div class="features-area features-style-2">
+    <div class="features-area features-style-2" id="shop">
         <div class="container">
             <div class="section-title text-center">
                 <span>Покупай Спортивную Еду По Оптимальной Цене</span>
@@ -373,7 +370,7 @@
     </div> -->
     <!-- counter-area end -->
     <!-- pice-area start -->
-    <div class="pricing-area">
+    <div class="pricing-area" id="price">
         <div class="container">
             <div class="section-title text-center">
                 <span>У Нас Лучшие Цены</span>
@@ -484,7 +481,7 @@
 
     <!-- testimonial-area end -->
     <!-- team-area start -->
-    <div class="team-area team-area-2">
+    <div class="team-area team-area-2" id="team">
         <div class="container">
             <div class="col-l2">
                 <div class="section-title text-center">
@@ -563,7 +560,7 @@
 
 
     <!-- blog-area start -->
-    <div class="blog-area blog-style-2">
+    <div class="blog-area blog-style-2" id="news">
         <div class="container">
             <div class="col-l2">
                 <div class="section-title section-title-3 text-center">
@@ -681,7 +678,7 @@
     <!-- blog-area start -->
 
     <!-- .footer-area start -->
-    <div class="footer ">
+    <div class="footer " id="footer">
         <div class="container">
             <div class="row">
                 <div class=" col-md-6 map">
