Added links to Main menu

--- a/shop.html
+++ b/shop.html
@@ -71,10 +71,10 @@
                 <div class="col-lg-3 col-md-9 col-sm-9 col-9">
                     <div class="logo_1">
                         <a href="index.html">
-                        <p>
-                            GOLD FITNESS
-                        </p>
-                    </a>
+                            <p>
+                                GOLD FITNESS
+                            </p>
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-8 d-none d-lg-block">
@@ -83,15 +83,13 @@
                             <nav class="nav_mobile_menu">
                                 <ul>
 
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="index.html#">Services</a>
-
+                                    <li><a href="index.html#images">Галерея</a></li>
+                                    <li><a href="index.html#shop">Товары</a></li>
+                                    <li><a href="index.html#price">Расценки</a></li>
+                                    <li><a href="index.html#team">Тренера</a>
+                                    <li><a href="index.html#news">Новости</a></li>
+                                    <li><a href="index.html#footer">Контакты</a>
                                     </li>
-                                    <li><a href="http://wpocean.com/tf/html/shipter/case.html">Pages</a>
-
-                                    </li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                    <li><a href="index.html#">Blog</a>
 
                                     </li>
                                 </ul>
