More about in slick slider shop

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <nav class="nav_mobile_menu">
                                 <ul>
 
-                                   <!--  <li><a href="#about">О Нас</a></li> -->
+                                    <!--  <li><a href="#about">О Нас</a></li> -->
                                     <li><a href="#images">Галерея</a></li>
                                     <li><a href="#shop">Товары</a></li>
                                     <li><a href="#price">Расценки</a></li>
@@ -128,8 +128,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
-                            <h2><span>Спорт это </span>Биение твоего сердца, <span>это твой РИТМ жизни . . .</span>
-                            </h2>
+                            <h2><span>Стань Крепче, Сильнее и </span> <span>Увереннее Вместе с Gold Fitness!</span></h2>
+
+
 
                         </div>
                     </div>
@@ -140,8 +141,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
-                            <h2><span>Стань Крепче, Сильнее и </span> <span>Увереннее Вместе с Gold Fitness!</span></h2>
-
+                            <h2><span>Спорт это </span>Биение твоего сердца, <span>это твой РИТМ жизни . . .</span>
+                            </h2>
                         </div>
                     </div>
                 </div>
@@ -151,7 +152,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
-                            <h2><span>We Provide the Best Solution</span> <span>For Your Transport.</span></h2>
+                            <h2><span>Мы Преподносим Лучшее</span> <span>Для Вас и Вашего Тела.</span></h2>
 
                         </div>
                     </div>
@@ -268,35 +269,49 @@
                 <div class="multiple-items">
                     <a href="shop.html" class="square">
                         <div class="slick_img"> <img src="assets/images/Shop/optimum-nutrition-gold-standard.jpg"></div>
-                        <h6>FiraCode Gold Fitness</h6>
+                        <h6>Optimum Nutrition Gold
+                        </h6>
                         <div class="slick_text">Гейнер</div>
+
+                        <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
+
                     </a>
 
                     <a href="#" class="square">
                         <div class="slick_img"><img src="./assets/images/blog/2.jpg"></div>
                         <h6>FiraCode Gold Fitness</h6>
                         <div class="slick_text">Гейнер</div>
+                        <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
+
                     </a>
 
                     <a href="#" class="square">
                         <div class="slick_img"><img src="./assets/images/blog/3.jpg"></div>
                         <h6>FiraCode Gold Fitness</h6>
                         <div class="slick_text">Гейнер</div>
+                        <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
+
                     </a>
                     <a href="#" class="square">
                         <div class="slick_img"><img src="./assets/images/blog/1.jpg"></div>
                         <h6>FiraCode Gold Fitness</h6>
                         <div class="slick_text">Гейнер</div>
+                        <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
+
                     </a>
                     <a href="#" class="square">
                         <div class="slick_img"><img src="./assets/images/blog/2.jpg"></div>
                         <h6>FiraCode Gold Fitness</h6>
                         <div class="slick_text">Гейнер</div>
+                        <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
+
                     </a>
                     <a href="#" class="square">
                         <div class="slick_img"><img src="./assets/images/blog/3.jpg"></div>
                         <h6>FiraCode Gold Fitness</h6>
                         <div class="slick_text">Гейнер</div>
+                        <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
+
                     </a>
                 </div>
             </div>
