--- a/index.html
+++ b/index.html
@@ -129,9 +129,6 @@
                     <div class="row">
                         <div class="col col-lg-9 slide-caption">
                             <h2><span>Стань Крепче, Сильнее и </span> <span>Увереннее Вместе с Gold Fitness!</span></h2>
-
-
-
                         </div>
                     </div>
                 </div>
@@ -215,22 +212,30 @@
             <div class=" row ">
                 <div class="card col-md-4 ">
                     <div class="img-container">
-                        <img onclick="window.open(this.src)" id="street" class="img"
-                            src="./assets/images/GoldImages/photo_2019-02-27_22-53-40.jpg" alt="street" />
+                        <img class="img myImg" src="./assets/images/GoldImages/photo_2019-02-27_22-53-40.jpg" />
                     </div>
                 </div>
 
                 <div class="card col-md-4">
                     <div class="img-container">
-                        <img onclick="window.open(this.src)" id="hill" class="img"
-                            src="./assets/images/GoldImages/img.jpg" alt="hill" />
+                        <img class="img myImg" src="./assets/images/GoldImages/img.jpg" />
+                    </div>
+                    <div class="modal myModal">
+
+                        <!-- The Close Button -->
+                        <span class="close">&times;</span>
+                
+                        <!-- Modal Content (The Image) -->
+                        <img class="modal-content img1">
+                
+                        <!-- Modal Caption (Image Text) -->
+                        <div class="caption"></div>
                     </div>
                 </div>
 
                 <div class="card col-md-4">
                     <div class="img-container">
-                        <img onclick="window.open(this.src)" id="lake" class="img"
-                            src="./assets/images/GoldImages/img5.jpg" alt="lake" />
+                        <img class="img myImg" src="./assets/images/GoldImages/img5.jpg" />
                     </div>
                 </div>
             </div>
@@ -239,27 +244,35 @@
             <div class=" row abc">
                 <div class="card col-md-4 ">
                     <div class="img-container">
-                        <img onclick="window.open(this.src)" id="street" class="img"
-                            src="./assets/images/GoldImages/img2.jpg" alt="street" />
+                        <img class="img myImg" src="./assets/images/GoldImages/img2.jpg" />
                     </div>
                 </div>
 
                 <div class="card col-md-4">
                     <div class="img-container">
-                        <img onclick="window.open(this.src)" id="hill" class="img"
-                            src="./assets/images/GoldImages/img3.jpg" alt="hill" />
+                        <img class="img myImg" src="./assets/images/GoldImages/img3.jpg" />
                     </div>
                 </div>
 
                 <div class="card col-md-4">
                     <div class="img-container">
-                        <img onclick="window.open(this.src)" id="lake" class="img"
-                            src="./assets/images/GoldImages/img4.jpg" alt="lake" />
+                        <img class="img myImg" src="./assets/images/GoldImages/img4.jpg" />
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <div class="modal myModal">
+
+        <!-- The Close Button -->
+        <span class="close">&times;</span>
+
+        <!-- Modal Content (The Image) -->
+        <img class="modal-content img1">
+
+        <!-- Modal Caption (Image Text) -->
+        <div class="caption"></div>
+    </div>
     <!-- feature-area start -->
     <div class="features-area features-style-2" id="shop">
         <div class="container">
