--- a/index.html
+++ b/index.html
@@ -284,22 +284,22 @@
                         <div class="slick_img"> <img src="assets/images/Shop/optimum-nutrition-gold-standard.jpg"></div>
                         <h6>Optimum Nutrition Gold
                         </h6>
-                        <div class="slick_text">Гейнер</div>
+                        <div class="slick_text">Протеин</div>
 
                         <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
 
                     </a>
 
-                    <a href="#" class="square">
-                        <div class="slick_img"><img src="./assets/images/blog/2.jpg"></div>
-                        <h6>FiraCode Gold Fitness</h6>
+                    <a href="shop-2.html" class="square">
+                        <div class="slick_img"><img src="https://d3n4pjass4bd0n.cloudfront.net/images/thumbnails/500/500/detailed/79/serious-mass-gainer-5-45-banan.jpg"></div>
+                        <h6>Optimum Nutrition Serious</h6>
                         <div class="slick_text">Гейнер</div>
-                        <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
+                        <div class="about_product"> 1250 калорий в порции с натуральным вкусом . . .</div>
 
                     </a>
 
                     <a href="#" class="square">
-                        <div class="slick_img"><img src="./assets/images/blog/3.jpg"></div>
+                        <div class="slick_img"><img src="./assets/images/Shop/10530943-6634663400582052.jpg"></div>
                         <h6>FiraCode Gold Fitness</h6>
                         <div class="slick_text">Гейнер</div>
                         <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
@@ -408,10 +408,10 @@
                     <div class=" aboniment_border">
 
                         <div class="text_blog">
-                            Утренний до 12:00
+                            Дневной с 8:00 до 17:00
                         </div>
                         <div class="price">
-                            3000 сом.
+                            1500 сом.
                         </div>
                         <div class="text_blog_p">
                             12 занятий/мес.
@@ -424,10 +424,10 @@
                     <div class=" aboniment_border aboniment_img2">
 
                         <div class="text_blog">
-                            Утренний до 12:00
+                            Вечерний с 8:00 до 23:00
                         </div>
                         <div class="price">
-                            3000 сом.
+                            2000 сом.
                         </div>
                         <div class="text_blog_p">
                             12 занятий/мес.
@@ -440,10 +440,10 @@
                     <div class=" aboniment_border aboniment_img3">
 
                         <div class="text_blog">
-                            Утренний до 12:00
+                            Женский с 8:00 до 23:00
                         </div>
                         <div class="price">
-                            3000 сом.
+                            1500 сом.
                         </div>
                         <div class="text_blog_p">
                             12 занятий/мес.
@@ -457,14 +457,15 @@
                 <div class="col-md-4">
                     <div class=" aboniment_border aboniment_img4">
 
+                       
                         <div class="text_blog">
-                            Утренний до 12:00
+                            На 3 Месяца 
                         </div>
                         <div class="price">
-                            3000 сом.
+                            4800 сом.
                         </div>
                         <div class="text_blog_p">
-                            12 занятий/мес.
+                            36 занятий.
                         </div>
                         <div class="shadow"></div>
 
@@ -474,13 +475,13 @@
                     <div class=" aboniment_border aboniment_img5">
 
                         <div class="text_blog">
-                            Утренний до 12:00
+                            Безлимит
                         </div>
                         <div class="price">
-                            3000 сом.
+                            2500 сом.
                         </div>
                         <div class="text_blog_p">
-                            12 занятий/мес.
+                            31 занятий/мес.
                         </div>
                         <div class="shadow"></div>
 
@@ -490,13 +491,13 @@
                     <div class=" aboniment_border">
 
                         <div class="text_blog">
-                            Утренний до 12:00
+                            Разовое 
                         </div>
                         <div class="price">
-                            3000 сом.
+                            200 сом.
                         </div>
                         <div class="text_blog_p">
-                            12 занятий/мес.
+                            1 занятие.
                         </div>
                         <div class="shadow"></div>
 
