--- a/shop-2.html
+++ b/shop-2.html
@@ -127,12 +127,13 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="assets/images/Shop/optimum-nutrition-gold-standard.jpg" class="imgShop">
+                    <img src="https://d3n4pjass4bd0n.cloudfront.net/images/thumbnails/500/500/detailed/79/serious-mass-gainer-5-45-banan.jpg"
+                        class="imgShop">
                 </div>
                 <div class="col-md-8">
 
                     <div class="head">
-                        <h1>Optimum Nutrition Gold</h1>
+                        <h1>Optimum Nutrition Serious</h1>
                     </div>
                     <div class="row combain">
                         <div class="col-md-6">
@@ -165,29 +166,26 @@
 
                     <div class="text">
                         <p class="text-center"><strong>Описание</strong></p>
-                        <p>Смесь белковая Gold standard 100% WHEY производится в США.
-                            Согласно свидетельству о государственной регистрации, эта
-                            белковая смесь является специализированным пищевым продуктом для питания спортсменов.
-                            По проверенным показателям продукт соответствует требованиям ТР ТС 027/2012
-                            "О безопасности отдельных видов специализированной пищевой продукции, в том числе
-                            диетического
-                            лечебного и диетического профилактического питания". Экспериза показала, что в составе
-                            исследуемого
-                            образца нет опасных и вредных вещества — тяжелых металлов (кадмия, свинца, ртути), мышьяка,
-                            афлатоксина и антибиотиков. </p>
-                        <p>Кроме того, образце нет каких-либо посторонних растительных компонентов белковой и углеводной
-                            природы.
-                            Также не было выявлено наличие препарата коллагенового животного белка. По показателям
-                            биологической
-                            ценности белка проверенный продукт соответствует белку молочной сыворотки. В составе образца
-                            —
-                            практически идеальное соотношение аминокислот. Общее содержание незаменимых аминокислот
-                            составляет
-                            40,1 г на 100 г белка, а их скор — не менее 101 %. </p>
-                        <p>По данным производителя, использованный в составе продукта препарат «Aminogen» представляющий
-                            собой фермент
-                            (комплекс пептидаз микробиального происхождения), может способствовать улучшению усвоения
-                            аминокислот и белков.</p>
+                        <p>1250 калорий в порции с натуральным вкусом - это то, что надо для создания мускулатуры
+                            поразительной массы и силы. Надо быть серьезным спортсменом, чтобы справиться с такой
+                            калорийностью и превратить содержащийся в Serious Mass белок в собственные мышцы!
+
+                            С помощью Serious Mass Вы получите необходимое количество протеинов, углеводов,
+                            микроэлементов и калорий, что поможет Вам быстро набрать вес. Каждый элемент имеет высокую
+                            Биологическую Ценность.
+
+                            Serious Mass содержит такие ключевые факторы, как аминокислоты. Serious Mass содержит 50
+                            грамма белков и 251 грамм энергоуглеводов в каждой порции. Комплекс углеводов содержит
+                            длинные, средние и короткие цепочки полисахаридов, дающих энергию Вашему организму, в том
+                            числе и кристаллическую фруктозу.<br> <br> <span class="other">Другие ингредиенты:</span> мальтодекстрин, протеиновая
+                            смесь (концентрат сывороточного протеина, казеинат кальция, яичный белок, сладкая молочная
+                            сыворотка), искусственные ароматизаторы, витаминная и минеральная смесь (фосфат дикалия,
+                            аспартат магния, фосфат дикальция, цитрат кальция, аскорбиновая кислота, ниацинамид, цитрат
+                            цинка, бета каротин, пантотенат дикальция, диальфа токоферил сукцинат, селенометионин,
+                            глюконат меди, фумарат железа, аминокислотный хелат марганца, мононитрат тиамина, пиридоксин
+                            гидрохлорид, рибофлавин, полиникотинат хрома, фолиевая кислота, биотин, аминокислотный хелат
+                            молибдена, холекальциферол, иодид калия, цианокобаламин), триглицериды со средней цепью, FD
+                            & C Red #40, ацесульфам калия.</p>
                     </div>
                 </div>
             </div>
